# ev-ecu-system

./: .clang-format  .cppcheck  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml  security.yml  static-analysis.yml  unit-tests.yml
Core/Inc/: ev_config.h
Core/Src/: main.c
Docs/: 001_requirements.md  002_system_design.md  003_cicd_pipelines.md  00_project_overview.md  01_environment_setup.md  02_github_setup.md  03_requirements.md  04_system_design.md  05_cicd_pipelines.md  06_coding_standards.md  07_testing_strategy.md  ADR-001-UART-logging.md  ADR-002-003-I2C-SPI.md  README.md  SUMMARY.md
Drivers/STM32_HAL/: stm32_stubs.c  stm32f1xx_hal.h  stm32f1xx_hal_adc.h  stm32f1xx_hal_gpio.h  stm32f1xx_hal_tim.h  stm32f1xx_hal_uart.h
Tests/: CMakeLists.txt  test_placeholder.c
Tests/mocks/: mock_stm32_hal_i2c.h  mock_stm32_hal_spi.c  mock_stm32_hal_spi.h
cmake/: arm-gcc-toolchain.cmake
core/Inc/: ev_config.h
core/inc/: can_driver.h  ev_config.h  ev_state_machine.h  ev_types.h  fault_logger.h  fault_manager.h  motor_ctrl.h  sensor_hal.h
core/src/: can_driver.c  ev_state_machine.c  fault_logger.c  fault_manager.c  main.c  motor_ctrl.c  sensor_hal.c
docs/: 00_project_overview.md  01_environment_setup.md  02_github_setup.md  04_system_design.md  05_cicd_pipelines.md  06_coding_standards.md  07_testing_strategy.md  CHANGELOG.md  GLOSSARY.md  README.md  SUMMARY.md
drivers/STM32_HAL/: stm32f1xx_hal.h  stm32f1xx_hal_adc.h  stm32f1xx_hal_i2c.h  stm32f1xx_hal_spi.h
simulation/wokwi/: diagram.json  wokwi.toml
tests/: CMakeLists.txt  test_can_driver.c  test_ev_state_machine.c  test_fault_manager.c  test_motor_ctrl.c  test_placeholder.c  test_protocol_prep.c  test_runner.c  test_sensor_hal.c
tests/mocks/: mock_stm32_hal_adc.c  mock_stm32_hal_adc.h  mock_stm32_hal_gpio.c  mock_stm32_hal_gpio.h  mock_stm32_hal_i2c.c  mock_stm32_hal_tim.c  mock_stm32_hal_tim.h
